tests/paczka1/small_fuzzy/64343880.err
Error in line 2: 3OdNpIxo6VA S450 8,5
Error in line 10: YX2e7s S450 44,5
Error in line 11: YX2e7s A261 1,0
